addition of paragraph

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>I'm just making changes so I can practise branching and merging.</h1>
+    <p>Here's another change</p>
   </body>
 </html>
