Sample code added to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
+    <style>
+      img {
+        width: 300px;
+      }
+    </style>
   </head>
   <body>
-    <h1>I'm just making changes so I can practise branching and merging.</h1>
-    <p>Here's another change</p>
+    <header>
+      <h1>Frannie's Real Estate</h1>
+    </header>
+    <main>
+      <section class="property-section">
+        <h2>Properties For Sale</h2>
+        <div id="properties-list">
+          <article>
+            <h3>23 Wood Lane</h3>
+            <h4>Location: Halesworth</h4>
+            <p>Bedrooms: 4</p>
+            <p>Bathrooms: 2</p>
+            <p>Garden: yes</p>
+            <p>Off-road parking: yes</p>
+            <img
+              src="https://images.unsplash.com/photo-1518780664697-55e3ad937233?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=465&q=80"
+              alt="house"
+            />
+            <p>£850,000</p>
+          </article>
+        </div>
+      </section>
+    </main>
+    <footer>Frannie's Real Estate</footer>
+    <script src="/app.js"></script>
   </body>
 </html>
